[gd_scene load_steps=45 format=3 uid="uid://bdjeq1dahcop1"]

[ext_resource type="Script" uid="uid://d0kxc6xmbpclh" path="res://scripts/reception.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://clr4ks4ir7l7v" path="res://sprites/white.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cyclrs00p5x47" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Script" uid="uid://bmn5afbeduq34" path="res://scripts/event_mgt.gd" id="2_jscy8"]
[ext_resource type="Script" uid="uid://bx27pp5t70upq" path="res://scripts/elevator.gd" id="2_o6xl0"]
[ext_resource type="PackedScene" uid="uid://dsqcyyjt3hacl" path="res://prefabs/guest_interactable.tscn" id="2_tbgi4"]
[ext_resource type="Script" uid="uid://b5b2afdujt3om" path="res://scripts/entrance.gd" id="2_tefeu"]
[ext_resource type="Script" uid="uid://dixu1hmoi0tk" path="res://scripts/task_mgt.gd" id="2_tipki"]
[ext_resource type="PackedScene" uid="uid://b181pbq2sxo0" path="res://prefabs/guest_tasks/go_to_reception.tscn" id="3_85g3d"]
[ext_resource type="PackedScene" uid="uid://swncf76j0yrp" path="res://prefabs/guest_tasks/discuss_stay.tscn" id="4_choun"]
[ext_resource type="PackedScene" uid="uid://bqqftwfar4q0x" path="res://prefabs/guest_tasks/go_to_room.tscn" id="5_ya4ey"]
[ext_resource type="PackedScene" uid="uid://udtfg7f1sikw" path="res://prefabs/guest_tasks/wait_in_room.tscn" id="6_eb6dy"]
[ext_resource type="Script" uid="uid://cq8k7it33yhhv" path="res://scripts/room_mgt.gd" id="7_a8y0u"]
[ext_resource type="PackedScene" uid="uid://ctyrslrmwbt1n" path="res://prefabs/guest_tasks/go_to_elevator.tscn" id="7_jbj1t"]
[ext_resource type="Script" uid="uid://w6dymuou1ya0" path="res://scripts/floor.gd" id="8_jkv2x"]
[ext_resource type="PackedScene" uid="uid://cm81kilwvacc7" path="res://prefabs/guest_tasks/wait_for_elevator.tscn" id="8_muem4"]
[ext_resource type="PackedScene" uid="uid://f3holch1xk34" path="res://prefabs/guest_tasks/wait_in_elevator.tscn" id="9_0ld40"]
[ext_resource type="Script" uid="uid://n1vloh3qcmi4" path="res://scripts/floor_mgt.gd" id="9_muem4"]
[ext_resource type="Script" uid="uid://ctr5h0etfm8cx" path="res://scripts/event_feed.gd" id="10_y6deb"]
[ext_resource type="PackedScene" uid="uid://blayfjgy8vr41" path="res://prefabs/guest_tasks/hesitate.tscn" id="10_yc10j"]
[ext_resource type="PackedScene" uid="uid://bystq3vk3iwi2" path="res://prefabs/event_feed_text.tscn" id="11_og1vs"]
[ext_resource type="PackedScene" uid="uid://b32fxa1n28wyu" path="res://prefabs/event_feed_button.tscn" id="12_2wyq8"]
[ext_resource type="PackedScene" uid="uid://dxjtphs6bqbam" path="res://prefabs/event.tscn" id="12_gqmmt"]
[ext_resource type="PackedScene" uid="uid://dyijearirnba0" path="res://prefabs/guest_tasks/wait_for_event_finished.tscn" id="13_pm3ni"]
[ext_resource type="PackedScene" uid="uid://bsfthsdopw7rv" path="res://prefabs/guest_tasks/leave_motel.tscn" id="14_vxglm"]
[ext_resource type="Script" uid="uid://cca6mysw7o6nl" path="res://scripts/subscriber_mgt.gd" id="17_qkpxi"]
[ext_resource type="PackedScene" uid="uid://bhe7jcpllmb3t" path="res://prefabs/room.tscn" id="18_2f3dj"]
[ext_resource type="Script" uid="uid://dhw1wk8qr04gf" path="res://scripts/time_mgt.gd" id="18_5q0nq"]
[ext_resource type="Script" uid="uid://cubg7vg4le5h2" path="res://scripts/mouse_follower.gd" id="19_kmb1v"]
[ext_resource type="PackedScene" uid="uid://cy422lrw8sl58" path="res://prefabs/guests/civilian.tscn" id="22_jscy8"]
[ext_resource type="Script" uid="uid://c8802f0265m5l" path="res://scripts/lobby.gd" id="23_yq6so"]
[ext_resource type="PackedScene" uid="uid://ccgk4hd140t4w" path="res://prefabs/helper_phone.tscn" id="28_kmb1v"]
[ext_resource type="PackedScene" uid="uid://c358xax7pu2rn" path="res://prefabs/clock.tscn" id="29_yq6so"]
[ext_resource type="PackedScene" uid="uid://4m33o6cm7w62" path="res://prefabs/next_day_button.tscn" id="30_fv21b"]
[ext_resource type="PackedScene" uid="uid://daqmmoe1hk8pu" path="res://prefabs/resources.tscn" id="30_tel4y"]
[ext_resource type="Texture2D" uid="uid://dxtodua1ohkjp" path="res://sprites/white_circle.png" id="34_dgi5k"]
[ext_resource type="PackedScene" uid="uid://wufa8gi4e374" path="res://prefabs/helper.tscn" id="35_j8jky"]
[ext_resource type="Script" uid="uid://bspnd7h12j5d7" path="res://scripts/idle_helpers.gd" id="37_pibwh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkv2x"]
size = Vector2(100, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trceg"]
size = Vector2(431, 223)

[sub_resource type="Animation" id="Animation_dgi5k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5q0nq"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_j8jky"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j8jky"]
_data = {
&"RESET": SubResource("Animation_dgi5k"),
&"fade_in": SubResource("Animation_5q0nq"),
&"fade_out": SubResource("Animation_j8jky")
}

[node name="main" type="Node"]
script = ExtResource("1_tbgi4")

[node name="event_mgt" type="Node" parent="."]
script = ExtResource("2_jscy8")
event_prefab = ExtResource("12_gqmmt")

[node name="task_mgt" type="Node" parent="."]
script = ExtResource("2_tipki")
go_to_reception = ExtResource("3_85g3d")
discuss_stay = ExtResource("4_choun")
go_to_room = ExtResource("5_ya4ey")
wait_in_room = ExtResource("6_eb6dy")
go_to_elevator = ExtResource("7_jbj1t")
wait_for_elevator = ExtResource("8_muem4")
wait_in_elevator = ExtResource("9_0ld40")
hesitate = ExtResource("10_yc10j")
wait_for_event_finished = ExtResource("13_pm3ni")
leave_motel = ExtResource("14_vxglm")

[node name="room_mgt" type="Node" parent="."]
script = ExtResource("7_a8y0u")

[node name="floor_mgt" type="Node" parent="."]
script = ExtResource("9_muem4")

[node name="subscriber_mgt" type="Node" parent="."]
script = ExtResource("17_qkpxi")

[node name="time_mgt" type="Node" parent="."]
script = ExtResource("18_5q0nq")

[node name="mouse_follower" type="Node2D" parent="."]
z_index = 1220
script = ExtResource("19_kmb1v")

[node name="container" type="Node2D" parent="mouse_follower"]
position = Vector2(0, 35)

[node name="sprite" type="Sprite2D" parent="mouse_follower"]
visible = false
scale = Vector2(0.19099256, 0.19099256)
texture = ExtResource("34_dgi5k")

[node name="events" type="Node2D" parent="."]
position = Vector2(-7, -2)

[node name="camera" type="Camera2D" parent="."]
position = Vector2(132, -99)

[node name="world" type="Node2D" parent="."]

[node name="floor_2" type="Node2D" parent="world"]
position = Vector2(0, -253)
script = ExtResource("8_jkv2x")
number = 2

[node name="room_1" parent="world/floor_2" instance=ExtResource("18_2f3dj")]
position = Vector2(273, 0)
number = 1

[node name="room_2" parent="world/floor_2" instance=ExtResource("18_2f3dj")]
position = Vector2(451, 0)
number = 2

[node name="room_3" parent="world/floor_2" instance=ExtResource("18_2f3dj")]
position = Vector2(625, 0)
number = 3

[node name="elevator" type="Area2D" parent="world/floor_2" node_paths=PackedStringArray("floor_1", "floor_2")]
script = ExtResource("2_o6xl0")
floor_1 = NodePath("../../floor_1")
floor_2 = NodePath("..")

[node name="shape" type="CollisionShape2D" parent="world/floor_2/elevator"]
shape = SubResource("RectangleShape2D_jkv2x")

[node name="guest_interactable" parent="world/floor_2/elevator" instance=ExtResource("2_tbgi4")]

[node name="visual" type="Node2D" parent="world/floor_2/elevator"]

[node name="sprite" type="Sprite2D" parent="world/floor_2/elevator/visual"]
texture = ExtResource("1_o5qli")

[node name="center" type="CenterContainer" parent="world/floor_2/elevator/visual"]
offset_right = 40.0
offset_bottom = 40.0
use_top_left = true

[node name="Label" type="Label" parent="world/floor_2/elevator/visual/center"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "ELEVATOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="floor_1" type="Node2D" parent="world"]
script = ExtResource("8_jkv2x")
number = 1

[node name="lobby" type="Area2D" parent="world/floor_1"]
position = Vector2(273, 0)
script = ExtResource("23_yq6so")

[node name="shape" type="CollisionShape2D" parent="world/floor_1/lobby"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_trceg")
debug_color = Color(0, 0.6, 0.69803923, 0)

[node name="sprite" type="Sprite2D" parent="world/floor_1/lobby"]
self_modulate = Color(1, 0.5137255, 0.5372549, 0.5019608)
z_index = -335
scale = Vector2(4.327773, 2.2317872)
texture = ExtResource("1_o5qli")

[node name="entrance" type="Node2D" parent="world/floor_1/lobby"]
position = Vector2(237, 0)
script = ExtResource("2_tefeu")

[node name="guest_interactable" parent="world/floor_1/lobby/entrance" instance=ExtResource("2_tbgi4")]

[node name="visual" type="Node2D" parent="world/floor_1/lobby/entrance"]

[node name="sprite" type="Sprite2D" parent="world/floor_1/lobby/entrance/visual"]
texture = ExtResource("1_o5qli")

[node name="center" type="CenterContainer" parent="world/floor_1/lobby/entrance/visual"]
offset_right = 40.0
offset_bottom = 40.0
use_top_left = true

[node name="Label" type="Label" parent="world/floor_1/lobby/entrance/visual/center"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "ENTRANCE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="reception" type="Node2D" parent="world/floor_1/lobby"]
position = Vector2(-48, 0)
script = ExtResource("1_jyhfs")

[node name="guest_interactable" parent="world/floor_1/lobby/reception" instance=ExtResource("2_tbgi4")]

[node name="visual" type="Node2D" parent="world/floor_1/lobby/reception"]

[node name="sprite" type="Sprite2D" parent="world/floor_1/lobby/reception/visual"]
texture = ExtResource("1_o5qli")

[node name="center" type="CenterContainer" parent="world/floor_1/lobby/reception/visual"]
offset_right = 40.0
offset_bottom = 40.0
use_top_left = true

[node name="Label" type="Label" parent="world/floor_1/lobby/reception/visual/center"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "RECEPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="civilian" parent="world/floor_1" instance=ExtResource("22_jscy8")]
position = Vector2(486, 0)

[node name="civilian2" parent="world/floor_1" instance=ExtResource("22_jscy8")]
position = Vector2(606, 0)

[node name="helper_phone" parent="world/floor_1" instance=ExtResource("28_kmb1v")]
position = Vector2(-113, 0)

[node name="event_feed" type="Node2D" parent="." node_paths=PackedStringArray("feed_container")]
visible = false
z_index = 2055
position = Vector2(6, -97)
script = ExtResource("10_y6deb")
feed_container = NodePath("column/panel/feed_container")
event_feed_text_prefab = ExtResource("11_og1vs")
event_feed_button_prefab = ExtResource("12_2wyq8")

[node name="column" type="Node2D" parent="event_feed"]
position = Vector2(-220, 0)
skew = -0.05235988

[node name="sprite" type="Sprite2D" parent="event_feed/column"]
self_modulate = Color(0.07683582, 0.07683582, 0.07683582, 1)
scale = Vector2(3.1435719, 7.831519)
texture = ExtResource("1_o5qli")

[node name="panel" type="Panel" parent="event_feed/column"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -300.0
offset_right = 125.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="feed_container" type="VBoxContainer" parent="event_feed/column/panel"]
custom_minimum_size = Vector2(250, 600)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="clock" parent="." instance=ExtResource("29_yq6so")]
position = Vector2(148, -370)

[node name="resources" parent="." instance=ExtResource("30_tel4y")]
position = Vector2(2, -376)

[node name="next_day_button" parent="." instance=ExtResource("30_fv21b")]
position = Vector2(321, -374)

[node name="blackout" type="Node2D" parent="."]
modulate = Color(0, 0, 0, 0)

[node name="sprite" type="Sprite2D" parent="blackout"]
scale = Vector2(14.744802, 10.691969)
texture = ExtResource("1_o5qli")

[node name="animation" type="AnimationPlayer" parent="blackout"]
libraries = {
&"": SubResource("AnimationLibrary_j8jky")
}

[node name="idle_helpers" type="Node2D" parent="."]
position = Vector2(-27, 174)
script = ExtResource("37_pibwh")

[node name="helper_slot_1" type="Node2D" parent="idle_helpers"]

[node name="helper" parent="idle_helpers/helper_slot_1" instance=ExtResource("35_j8jky")]

[node name="helper_slot_2" type="Node2D" parent="idle_helpers"]
position = Vector2(50, 0)

[node name="helper_slot_3" type="Node2D" parent="idle_helpers"]
position = Vector2(100, 0)

[node name="helper_slot_4" type="Node2D" parent="idle_helpers"]
position = Vector2(150, 0)

[node name="helper_slot_5" type="Node2D" parent="idle_helpers"]
position = Vector2(200, 0)
